# PE-thumalien-improve-2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: Home.py
dashboard/pages/: 1_#U00ad#U0192#U00f6#U00ec_Analyser.py  2_#U00ad#U0192#U00f4#U00e8_Explorer.py  3_#U00ad#U0192#U00f4#U00ea_M#U251c#U00aetriques.py  3_┬¡ãÆ├┤├¬_MÔö£┬«triques.py  4_#U00d4#U00dc#U00ed_Energie.py
data/labeled/: labeled_posts.json  labeled_posts_sample.json
docker/: Dockerfile  init.sql
docs/: labeler.md
models/: bert_metadata.json  tfidf_metadata.json
notebooks/: exploration.ipynb
scripts/: init_db.py  init_db.sql  setup.py  train_model.py
src/: __main__.py  cli.py  pipeline.py  schemas.py
src/classifier/: fake_news_classifier.py
src/collector/: bluesky_collector.py
src/database/: db_connector.py
src/emotion/: emotion_analyzer.py
src/explainability/: explainer.py
src/labeler/: __init__.py  labeler_service.py  setup_labeler_account.py
src/monitoring/: energy_tracker.py
src/preprocessing/: text_preprocessor.py
tests/: test_pipeline.py
